--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
     "next": "15.5.2",
-    "react": "19.1.0",
+    "react": "^19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.1.2",
